testsuite/tests/properties/invalid_call/property_with_args.lkt
import common

class BarNode: FooNode {
    @property fun plus_one(i: Int): Int = i + 1

    @exported fun p(): Int = node.plus_one
}
